[gd_scene load_steps=12 format=3 uid="uid://cdvbldfrx615o"]

[ext_resource type="Script" uid="uid://df3rwsyhq378x" path="res://scripts/boss_system.gd" id="1_fpyhl"]
[ext_resource type="Texture2D" uid="uid://dw3m1la4v3wj3" path="res://assets/Boss Background.png" id="2_lf6a4"]
[ext_resource type="Texture2D" uid="uid://fwolv04cx5ln" path="res://assets/Lily Pad.png" id="3_txoms"]
[ext_resource type="PackedScene" uid="uid://mlky7r11sp4p" path="res://scenes/battle/player.tscn" id="4_1scs2"]
[ext_resource type="PackedScene" uid="uid://dh0qkkui7ay5x" path="res://scenes/battle/hand.tscn" id="5_muimb"]
[ext_resource type="Script" uid="uid://ksqcsk2tffcb" path="res://scripts/battle_ui.gd" id="6_81nlw"]
[ext_resource type="AudioStream" uid="uid://dh6f3v22ywyj0" path="res://sounds/cards/highlight2.ogg" id="7_e83vo"]
[ext_resource type="FontFile" uid="uid://j3u6vwrixpc0" path="res://fonts/boldpixels/BoldPixels.otf" id="8_dx04e"]
[ext_resource type="AudioStream" uid="uid://duvil8dbrvwfm" path="res://sounds/songs/11. Victory.mp3" id="9_0eh3x"]
[ext_resource type="AudioStream" uid="uid://lxs73pyltqjl" path="res://sounds/songs/19. Defeat.mp3" id="10_ayg05"]
[ext_resource type="AudioStream" uid="uid://8jwmong3ht1" path="res://sounds/songs/boss/1. Hymn of Tabal.mp3" id="11_f24jv"]

[node name="BossSystem" type="Node2D"]
script = ExtResource("1_fpyhl")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1024.0
offset_bottom = 640.0
texture = ExtResource("2_lf6a4")

[node name="LilyPadPlayer" type="Sprite2D" parent="."]
position = Vector2(64, 475.25)
scale = Vector2(1.90625, 1.85938)
texture = ExtResource("3_txoms")

[node name="LilyPadBoss" type="Sprite2D" parent="."]
position = Vector2(800, 475.25)
scale = Vector2(1.90625, 1.85938)
texture = ExtResource("3_txoms")
flip_h = true

[node name="Player" parent="." instance=ExtResource("4_1scs2")]
position = Vector2(53, 412)
scale = Vector2(2.2, 2.2)

[node name="EnemyContainer" type="Node2D" parent="."]
position = Vector2(849, 413)
scale = Vector2(1.5, 1.5)

[node name="Hand" parent="." instance=ExtResource("5_muimb")]
position = Vector2(400, 560)
scale = Vector2(2, 2)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_81nlw")

[node name="EndTurnButton" type="Button" parent="UI"]
layout_mode = 0
offset_right = 127.0
offset_bottom = 50.0
text = "EndTurnButton"

[node name="EndTurnSound" type="AudioStreamPlayer2D" parent="UI/EndTurnButton"]
stream = ExtResource("7_e83vo")

[node name="StatusLabel" type="Label" parent="UI"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 50.0

[node name="WinLabel" type="Label" parent="."]
offset_left = 360.0
offset_top = 42.0
offset_right = 598.0
offset_bottom = 107.0
theme_override_fonts/font = ExtResource("8_dx04e")
theme_override_font_sizes/font_size = 64
text = "You Won!"

[node name="WinSong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_0eh3x")

[node name="LoseLabel" type="Label" parent="."]
offset_left = 314.0
offset_top = 131.0
offset_right = 638.0
offset_bottom = 196.0
theme_override_fonts/font = ExtResource("8_dx04e")
theme_override_font_sizes/font_size = 64
text = "You Lost! :("

[node name="LoseSong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_ayg05")

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_f24jv")

[node name="PlayAgainButton" type="Button" parent="."]
offset_left = 450.0
offset_top = 361.0
offset_right = 545.0
offset_bottom = 392.0
text = "Play Again?"

[node name="QuitButton" type="Button" parent="."]
offset_left = 478.0
offset_top = 395.0
offset_right = 520.0
offset_bottom = 426.0
text = "Quit"
